5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1764_2390.log
== TEST (2019-05-29 00:31:33) 
-- CODE:
from math import*

w=[1,2,3,4,5,6,7,8,9,10,11,12]
a=array(eval(input("")))
b=array(eval(input("")))
b1=0
a1=0
i=0

while(i<size(a)):
	if(a[i]>0)and(b[i]>0):
		ai=a-b
		x=max(ai)
	i+=1
print(x)

		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=array(eval(input("")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:32:13) 
-- CODE:
from numpy import*

w=[1,2,3,4,5,6,7,8,9,10,11,12]
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a1=0
i=0

while(i<size(a)):
	if(a[i]>0)and(b[i]>0):
		ai=a-b
		x=max(ai)
	i+=1
print(x)

		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 00:35:28) 
-- CODE:
from numpy import*

w=[1,2,3,4,5,6,7,8,9,10,11,12]
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a1=0
i=0

while(i<size(a)):
	if(a[i]>0)and(b[i]>0):
		ai=a-b
		x=max(ai)
	if(max(ai)==a[ai]):
		y=max(w)
	i+=1
print(y)

		



-- EXECUTION TIME:
0.590533
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 14, in <module>
    if(max(ai)==a[ai]):
IndexError: index 14 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 00:35:30) 
-- CODE:
from numpy import*

w=[1,2,3,4,5,6,7,8,9,10,11,12]
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a1=0
i=0

while(i<size(a)):
	if(a[i]>0)and(b[i]>0):
		ai=a-b
		x=max(ai)
	if(max(ai)==a[ai]):
		y=max(w)
	i+=1
print(y)

		



-- EXECUTION TIME:
0.537872
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 14, in <module>
    if(max(ai)==a[ai]):
IndexError: index 14 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:35:30) 
-- CODE:
from numpy import*

w=[1,2,3,4,5,6,7,8,9,10,11,12]
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a1=0
i=0

while(i<size(a)):
	if(a[i]>0)and(b[i]>0):
		ai=a-b
		x=max(ai)
	if(max(ai)==a[ai]):
		y=max(w)
	i+=1
print(y)

		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:37:06) 
-- CODE:
from numpy import*

w=[1,2,3,4,5,6,7,8,9,10,11,12]
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a1=0
i=0

while(i<size(a)):
	if(a[i]>0)and(b[i]>0):
		ai=a-b
		x=max(ai)
		m=w[ai]
	i+=1
print(m)

		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:38:16) 
-- CODE:
from numpy import*

w=["1,2,3,4,5,6,7,8,9,10,11,12"]
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a1=0
i=0

while(i<size(a)):
	if(a[i]>0)and(b[i]>0):
		ai=a-b
		x=max(ai)
		m=w[ai]
	i+=1
print(m)

		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:39:52) 
-- CODE:
from numpy import*

w=["1,2,3,4,5,6,7,8,9,10,11,12"]
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a1=0
i=0

while(i<size(a)):
	if(a[i]>0)and(b[i]>0):
		ai=a-b
		x=max(ai)
	i+=1
print(m)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:41:28) 
-- CODE:
from numpy import*

w=["1,2,3,4,5,6,7,8,9,10,11,12"]
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a1=0
i=0

while(i<size(a)):
	if(a[i]>0)and(b[i]>0):
		ai=a-b
		x=max(ai)
	i+=1
print(x)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:42:02) 
-- CODE:
from numpy import*

w=["1,2,3,4,5,6,7,8,9,10,11,12"]
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a1=0
i=0

while(i<size(a)):
	if(a[i]>0)and(b[i]>0):
		ai=a-b
		x=max(ai)
	i+=1
print(x)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:42:53) 
-- CODE:
from numpy import*

w=["1,2,3,4,5,6,7,8,9,10,11,12"]
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a1=0
i=0

while(i<size(a)):
	if(a[i]>0)and(b[i]>0):
		ai=a-b
		x=max(ai)
	i+=1
print(x)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:44:06) 
-- CODE:
from numpy import*

w=["1,2,3,4,5,6,7,8,9,10,11,12"]
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a1=0
i=0

while(i<size(a)):
	if(a[i]>0)and(b[i]>0):
		ai=a-b
		x=max(ai)
		a=x[w]
	i+=1
print(a)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:49:33) 
-- CODE:
from numpy import*

w=['1','2','3','4','5','6','7','8','9','10','11','12']
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a1=0
i=0

while(i<size(a)):
	if(a[i]>0)and(b[i]>0):
		ai=a-b
		x=max(ai)
		a=x[w]
	i+=1
print(a)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 00:52:21) 
-- CODE:
from numpy import*

w=['1','2','3','4','5','6','7','8','9','10','11','12']
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a2=0
i=0

while(i<size(a)):
		ai=a-b
		x=max(ai)
		a=x[w]
	i+=1
print(a)
		



-- EXECUTION TIME:
0.140233
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 14
    i+=1
       ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 00:52:23) 
-- CODE:
from numpy import*

w=['1','2','3','4','5','6','7','8','9','10','11','12']
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a2=0
i=0

while(i<size(a)):
		ai=a-b
		x=max(ai)
		a=x[w]
	i+=1
print(a)
		



-- EXECUTION TIME:
0.225473
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 14
    i+=1
       ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:52:23) 
-- CODE:
from numpy import*

w=['1','2','3','4','5','6','7','8','9','10','11','12']
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a2=0
i=0

while(i<size(a)):
		ai=a-b
		x=max(ai)
		a=x[w]
	i+=1
print(a)
		



-- ERROR:
File "XXXX", line 14
    i+=1
       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:52:37) 
-- CODE:
from numpy import*

w=['1','2','3','4','5','6','7','8','9','10','11','12']
a=array(eval(input("")))
b= array(eval(input("")))
b1=0
a2=0
i=0

while(i<size(a)):
	ai=a-b
	x=max(ai)
	a=x[w]
	i+=1
print(a)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:11:26) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype int)
b1=0
a2=0
i=0

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(ai)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(h)
		



-- ERROR:
File "XXXX", line 6
    n=arange(size(a),dtype int)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:11:47) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=0
i=0

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(ai)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(h)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:12:41) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=0
i=0

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(g)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(h)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:13:14) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=0
i=0

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:13:42) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=0
i=0

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(a2)
		



-- EXECUTION TIME:
0.440727
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:14:01) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(a2)
		



-- EXECUTION TIME:
0.493875
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:00:44) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:01:48) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:02:59) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(a2)
		



-- EXECUTION TIME:
0.519126
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:05:30) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(b1)
		



-- EXECUTION TIME:
0.351188
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:06:01) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(b1)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:07:49) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(b1)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:09:21) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(b1)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:09:24) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(b1)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:11:56) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(b1)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:13:23) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(b1)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:15:38) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	print(n)
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(b1)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:16:26) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
print(n)
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(b1)
		



-- ERROR:
File "XXXX", line 15
    if(n[i]<max(n)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:16:41) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(n)
print(b1)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:17:57) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=0

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(n)
print(b1)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:18:46) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=0

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(n)
print(b1)
		



-- EXECUTION TIME:
0.519449
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
[ 5 14 23 32 41 50 59 68 77 86 95  0]
2
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
[ 5 14 23 32 41 50 59 68 77 86  0  0]
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:18:50) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(n)
print(b1)
		



-- EXECUTION TIME:
0.376109
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
[ 0 14 23 32 41 50 59 68 77 86 95  0]
1
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
[ 0 14 23 32 41 50 59 68 77 86  0  0]
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:18:52) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(n)
print(b1)
		



-- EXECUTION TIME:
0.380797
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
[ 0 14 23 32 41 50 59 68 77 86 95  0]
1
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
[ 0 14 23 32 41 50 59 68 77 86  0  0]
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:18:58) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	

print(b1)
		



-- EXECUTION TIME:
0.479463
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:19:07) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(b1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:19:12) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)

b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(b1)




-- EXECUTION TIME:
0.483195
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:19:39) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(a2)
		



-- EXECUTION TIME:
0.593855
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:20:09) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(n)
print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:21:00) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=2

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(n)
print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:21:28) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=0

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(n)
print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:22:09) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=0

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(n)
print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:22:31) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(n)
print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:22:52) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(n)
print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:23:55) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	i+=1	
print(n)
print(i)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:24:16) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	i+=1	
print(n)
print(i)
		



-- EXECUTION TIME:
0.522544
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
[ 0 14 23 32 41 50 59 68 77 86 95  0]
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
[ 0 14 23 32 41 50 59 68 77 86  0  0]
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:24:19) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	i+=1	
print(n)
print(i)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:24:26) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	i+=1	

print(i)
		



-- EXECUTION TIME:
0.559402
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:24:28) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	i+=1	

print(i)
		



-- EXECUTION TIME:
0.526017
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:24:39) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<max(n)):
		b1+=1
	i+=1	

print(b1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:26:34) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<size(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(n)
print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:26:54) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<size(n)):
		b1+=1
	else:
		a2+=1
	i+=1	
print(n)
print(a2)
		



-- EXECUTION TIME:
0.50182
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
[ 0 14 23 32 41 50 59 68 77 86 95  0]
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
[ 0 14 23 32 41 50 59 68 77 86  0  0]
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:26:58) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<size(n)):
		b1+=1
	else:
		a2+=1
	i+=1	

print(a2)
		



-- EXECUTION TIME:
0.32714
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:27:43) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<size(n)):
		b1+=1
	else:
		a2+=1
	i+=1	

print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:29:50) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n<size(n)):
		b1+=1
	else:
		a2+=1
	i+=1	

print(a2)
		



-- EXECUTION TIME:
0.579678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 14, in <module>
    if(n<size(n)):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:29:51) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n<size(n)):
		b1+=1
	else:
		a2+=1
	i+=1	

print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:29:59) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<size(n)):
		b1+=1
	else:
		a2+=1
	i+=1	

print(a2)
		



-- EXECUTION TIME:
0.367479
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:30:19) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(size(n[i])<size(n)):
		b1+=1
	else:
		a2+=1
	i+=1	

print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:30:21) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(size(n[i])<size(n)):
		b1+=1
	else:
		a2+=1
	i+=1	

print(a2)
		



-- EXECUTION TIME:
0.381524
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:30:23) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(size(n[i])<size(n)):
		b1+=1
	else:
		a2+=1
	i+=1	

print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:49:31) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<size(n)):
		b1+=1
	else:
		a2+=1
	i+=1	

print(a2)
		



-- EXECUTION TIME:
0.370841
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:49:45) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<size(n)):
		b1+=1
	else:
		a2+=1
	i+=1	

print(a2)
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:50:20) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<size(n)):
		b1+=1
	else:
		a2+=1
	i+=1	

print(a2)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:51:07) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a),dtype= int)
b1=0
a2=1
i=1

while(i<size(n)):
	n[i]=a[i]-b[i]
	
	if(n[i]<size(n)):
		b1+=1
	else:
		a2+=1
	i+=1	

print(a2)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:04:45) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))

n=arange(size(a))
b1=0
a2=1
i=0

while(i < size(n)):
	n[i]=a[i]-b[i]


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:06:42) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))
n=arange(size(a))

i=0
while(i < size(n)):
	n[i]=a[i]-b[i]

i = 0
while(i < size(n))
	if (n[i] == max(n))
		print(i+1)




-- ERROR:
File "XXXX", line 12
    while(i < size(n))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:06:49) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))
n=arange(size(a))

i=0
while(i < size(n)):
	n[i]=a[i]-b[i]

i = 0
while(i < size(n)):
	if (n[i] == max(n)):
		print(i+1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:07:32) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))
n=arange(size(a))

i=0
while(i < size(n)):
	n[i]=a[i]-b[i]
	i += 1

i = 0
while(i < size(n)):
	if (n[i] == max(n)):
		print(i+1)
	i += 1



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:08:06) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))
n=arange(size(a))

i=0
while(i < size(n)):
	n[i]=a[i]-b[i]
	i += 1

i = 0
while(i < size(n)):
	if (n[i] == max(n)):
		print(i+1)
	i += 1



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 13:08:40) 
-- CODE:
from numpy import*

a=array(eval(input("")))
b= array(eval(input("")))
n=arange(size(a))

i=0
while(i < size(n)):
	n[i]=a[i]-b[i]
	i += 1

i = 0
while(i < size(n)):
	if (n[i] == max(n)):
		print(i+1)
	i += 1



-- EXECUTION TIME:
0.52412
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
